fix doc sidebar bottom cutoff

--- a/doc/static/scss/main.scss
+++ b/doc/static/scss/main.scss
@@ -50,7 +50,7 @@ body {
 
 .sidebar-toc {
     position: relative;
-    height: 100%;
+    height: 85%;
     margin-top: 1em;
     overflow: hidden;
 
